# axion

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  404.html  README.md  analyze_csv_difference.py  ball_bounce.usd  batch_visualize_2d.py  batch_visualize_interactive.py  dashboard.py  explore_hdf5.py  explore_hdf5.py.bak  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  playground.py  plot_contacts.py  plot_pendulum_states.py  plot_pendulum_states_comparison.py  plot_root_body_q.py  pyproject.toml  track.md  track_curve_3d.py  visualize_loss_landscape.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml
adjoint_warm_start_issue/: index.html
advanced/differentiable/: index.html
advanced/gpu/: index.html
advanced/performance/: index.html
api/constraints/: index.html
api/engine/: index.html
benchmarks/: contact_kernel_benchmark.py  contact_kernel_sweep_benchmark.py  dynamics_kernel_benchmark.py  tiled_ops_benchmark.py  unified_constraint_benchmark.py  warm_start_newton_steps_benchmark.py
benchmarks/matvec/: M_inv_Jjt_baked.py  M_inv_Jt3.py
convergence_criterion_options/: index.html
data/: surface.mtl
demos/: ball_bounce.py  ball_bounce_old.py  ball_bounce_really_old.py  base_simulator.py  branching.py  carter.py  collision_mesh.py  example_sph.py  helhest.py  helhest2.py  helhest_old.py  helhest_parallel.py  helhest_simple.py  logging_demo.py  mesh.py  nsys_profiling.py  rigid_soft_contact.py
docs/: adjoint_warm_start_issue.md  convergence_criterion_options.md  dt_dependence_problem.md  eisenstat_walker.md  friction_sticking_issue.md  gen_ref_pages.py  index.md  pcr_warm_start_options.md  warm_start_iterate_seeding_issue.md
docs/advanced/: gpu.md  (+2 more)
dt_dependence_problem/: index.html
eisenstat_walker/: index.html
examples/: ball_bounce.py  ball_box_collision.py  ball_fall.py  basic_pendulum.py  basic_prismatic.py  basic_shape.py  box_chain_fall.py  box_collision.py  box_stack.py  box_throw.py  box_throw2.py  cartpole.py  collision_primitives.py  collision_test.py  contact_difference.py  curling_cylinder.py  diffsim_bear.py  example_nvdb.py  example_robot_policy.py  helhest.py  helhest_flip.py  helhest_rotation.py  helhest_simple.py  helhest_simple2.py  horizontal_slider.py  pendulum_AxionEngine.py  pendulum_NerdEngine.py  random_collisions.py  random_joint.py  static_box.py  surface.py  surface_helhest.py  tank_example.py  track_chain.py  track_chain_capsule.py  track_chain_ground.py  track_collision.py  track_drop.py  track_equality_constraint.py  train_gnn_residual.py  (+3 more)
friction_sticking_issue/: index.html
javascripts/: mathjax.js
pcr_warm_start_options/: index.html
profiling/: contact_constraint.py
scripts/: patch_mjx_solver.sh
search/: search_index.json
test_scripts/: check_warm_start_snapshot.py  dump_sd.py  dump_warm_start_stats.py  measure_A_stability.py  measure_per_body_block_coupling.py  smoke_per_body_pair_phase1.py  smoke_per_body_pair_phase2.py  smoke_per_body_pair_phase3.py  smoke_per_body_pair_phase4.py  test_ilqr_B_jacobian.py  test_ilqr_jacobian.py  test_ilqr_riccati.py
tests/: README.md  combined_kernel_benchmark.py  contact_kernel_benchmark.py  contact_kernel_benchmark2.py  dynamics_kernel_benchmark.py  friction_kernel_benchmark.py  joint_kernel_benchmark.py  joint_log.py  plot_results.py  sim_config.py  taichi_dynamics_constraint.py  test_anisotropic_friction.py  test_constr_forces_from_predicted_state.py  test_constr_forces_random_scene.py  test_contact_constraint.py  test_contact_constraints.py  test_friction_braking.py  test_friction_constraints.py  test_gnn_dataset_batched.py  test_jacobian.py  test_joint_constraints.py  test_joint_control.py  test_ncp.py  test_numpy.py  test_prismatic_control.py  test_prismatic_joint.py  test_revolute_control.py  test_revolute_velocity_control.py  test_tile_load_indexed.py  test_tiled_ops.py  test_trajectory_buffer.py  tiled_ops_benchmark.py  tiled_ops_test.py
warm_start_iterate_seeding_issue/: index.html
(+1098 files in other folders)
