[project]
name = "axion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Aleš Kučera", email = "kuceral4@fel.cvut.cz" }]
requires-python = ">=3.12"
dependencies = [
  "h5py>=3.14.0",
  "hydra-core>=1.3.2",
  "matplotlib>=3.10.3",
  "newton[examples,importers,torch-cu12]",
  "nvtx>=0.2.12",
  "openmesh>=1.2.1",
  "pandas>=2.3.1",
  "pytest>=8.4.0",
  "scipy>=1.16.1",
  "taichi>=1.7.3",
  "torch>=2.7.1",
  "tqdm>=4.67.1",
  "trimesh>=4.6.12",
  "usd-core>=25.5.1",
  "warp-lang>=1.7.1",
]

[project.scripts]
ball_bounce_example = "axion.examples:ball_bounce_example"
collision_mesh_example = "axion.examples:collision_mesh_example"
collision_primitives_example = "axion.examples:collision_primitives_example"
helhest_example = "axion.examples:helhest_example"
helhest_simple_example = "axion.examples:helhest_simple_example"

[project.optional-dependencies]
docs = [
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-material>=9.6.21",
  "mkdocs-section-index>=0.3.10",
  "mkdocstrings-python>=1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["third_party/newton"]

[tool.uv.sources]
newton = { workspace = true }
