[project]
name = "axion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Aleš Kučera", email = "kuceral4@fel.cvut.cz" }]
requires-python = ">=3.12"

[project.optional-dependencies]
sim = [
  "h5py>=3.14.0",
  "hydra-core>=1.3.2",
  "matplotlib>=3.10.3",
  "newton[examples,importers,torch-cu12]",
  "nvtx>=0.2.12",
  "openmesh>=1.2.1",
  "pandas>=2.3.1",
  "plotly>=6.4.0",
  "pytest>=8.4.0",
  "scipy>=1.16.1",
  "taichi>=1.7.3",
  "tensorboard",
  "torch>=2.7.1",
  "tqdm>=4.67.1",
  "trimesh>=4.6.12",
  "usd-core>=25.5.1",
  "wandb>=0.25.0",
  "warp-lang>=1.7.1",
]
dev = [
  "axion[sim]",
  "axion[docs]",
]
docs = [
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-material>=9.6.21",
  "mkdocs-section-index>=0.3.10",
  "mkdocstrings-python>=1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["third_party/newton"]

[tool.uv.sources]
newton = { workspace = true }
